# datapkg

./: README.md  pyproject.toml
data/: machines.csv
datapkg/: __init__.py
v1/data/: persons.csv
v1/datapkg/: package.py
v2/datapkg/: __init__.py
v3/datapkg/: __init__.py
