[project]
name = "datapkg"
version = "0.1.0"
description = "An example data package"
dependencies = []
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datapkg"]

[tool.hatch.build.force-include]
"data" = "data"
